<?xml version="1.0" encoding="utf-8"?>

<!-- ============================================================= -->
<project name="Document Viewer Tool" default="help" basedir=".">

<property file="${basedir}/src/bzh/plealog/bioinfo/docviewer/conf/version.properties"/>

<property name="pbc.libName"    value="${prg.name}" />
<property name="pbc.LibVersion" value="${prg.version}" />

<property name="compile.optimize" value="on" />
<property name="compile.debug"    value="off" />

<property name="src"     value="${basedir}/src" />
<property name="jar"     value="${basedir}/jar" />

<property name="distrib"  value="${basedir}/distrib" />
<property name="Dlib"     value="${distrib}/lib" />
<property name="Dsrc"     value="${distrib}/src" />
<property name="Ddoc"     value="${distrib}/doc" />
<property name="Ddoc.api" value="${Ddoc}/api" />

<property name="pbc.libJar"  value="${distrib}/${pbc.libName}-${pbc.LibVersion}.jar"/>

<path id="class.path">
    <pathelement path="${classpath}"/>
    <fileset dir="${jar}">
      <include name="**/*.jar"/>
    </fileset>
    <pathelement location="${Dlib}"/>
</path>

<!-- ============================================================= -->
<target name="help">
  <echo>Ant task to handle Document Viewer Tool project.</echo>
  <echo/>
  <echo>      compile: compile the code.</echo>
  <echo>  makedistrib: compile and make release JAR of the DocViewer system.</echo>
</target>

<!-- ============================================================= -->
<target name="prepare">
    <delete dir="${distrib}"/>
    <mkdir  dir="${Dlib}"/>
    <mkdir  dir="${Dsrc}"/>
    <mkdir  dir="${Ddoc.api}"/>
</target>

<target name="is-java-eight">
  <condition property="java.eight">
      <equals arg1="${ant.java.version}" arg2="1.8"/>
  </condition>
</target>

<target name="javac8" depends="is-java-eight" if="java.eight">
	<echo>Use java 8 compiler</echo>
	<javac srcdir="${Dsrc}"
         destdir="${Dlib}"
         classpathref="class.path"
         debug="${compile.debug}"
         optimize="${compile.optimize}"
         >
  </javac>
</target>

  <!-- added for TravisCI -->
<target name="javac9" depends="is-java-eight" unless="java.eight">
  <echo>Use java 9 compiler</echo>
  <javac srcdir="${Dsrc}"
         destdir="${Dlib}"
         classpathref="class.path"
         debug="${compile.debug}"
         optimize="${compile.optimize}"
         >
    <compilerarg line="--add-modules java.se.ee"/>
  </javac>
</target>

<!-- ============================================================= -->
<target name="compile" depends="prepare">
  <copy todir="${Dsrc}">
    <fileset dir="${src}">
       <include name="bzh/plealog/bioinfo/**"/>
    </fileset>
  </copy>
	<antcall target="javac8"/>
	<antcall target="javac9"/>
	<copy todir="${Dlib}/bzh/plealog/bioinfo/">
    <fileset dir="${Dsrc}/bzh/plealog/bioinfo/">
      <include name="**/*properties"/>
      <include name="**/*messages"/>
      <include name="**/*cfg"/>
      <include name="**/*gif"/>
      <include name="**/*png"/>
      <include name="**/*gp"/>
    </fileset>
  </copy>
</target>

<!-- ============================================================= -->
<target name="makejar" depends="compile" >
    <jar destfile="${pbc.libJar}">
      <fileset dir="${Dlib}">
        <include name="bzh/plealog/bioinfo/**"/>
      </fileset>
      <manifest>
        <attribute name="Main-Class" value="bzh.plealog.bioinfo.docviewer.DocumentViewer"/>
        <attribute name="Built-By" value="Patrick G. Durand"/>
        <attribute name="Title" value="${prg.name}"/>
        <attribute name="Version" value="${prg.version}"/>
      </manifest>
    </jar>
	  <jar destfile="${pbc.libJar}" update="true">
	    <zipfileset dir="${basedir}" includes="*.txt"/>
	  </jar>
</target>

	<!-- ============================================================= -->
	<target name="travisci" depends="prepare">
	  <copy todir="${Dsrc}">
	    <fileset dir="${src}">
	       <include name="bzh/plealog/bioinfo/**"/>
	    </fileset>
	  </copy>
		<echo>Use java 9 compiler</echo>
		  <javac srcdir="${Dsrc}"
		         destdir="${Dlib}"
		         classpathref="class.path"
		         debug="${compile.debug}"
		         optimize="${compile.optimize}"
		         >
		    <compilerarg line="--add-modules java.se.ee"/>
		  </javac>
	  <copy todir="${Dlib}/bzh/plealog/bioinfo/">
	    <fileset dir="${Dsrc}/bzh/plealog/bioinfo/">
	      <include name="**/*properties"/>
	      <include name="**/*messages"/>
	      <include name="**/*cfg"/>
	      <include name="**/*gif"/>
	      <include name="**/*png"/>
	      <include name="**/*gp"/>
	    </fileset>
	  </copy>
	</target>

	<!-- ============================================================= -->
	<target name="makedistrib" depends="compile" >
	    <jar destfile="${pbc.libJar}">
	      <fileset dir="${Dlib}">
	        <include name="bzh/plealog/bioinfo/**"/>
	      </fileset>
	      <restrict>
	         <name name="**/*"/>
	         <archives>
	           <zips>
	             <fileset dir="jar" includes="**/*.jar"/>
	           </zips>
	         </archives>
	      </restrict>
	      <manifest>
	        <attribute name="Main-Class" value="bzh.plealog.bioinfo.docviewer.DocumentViewer"/>
	        <attribute name="Built-By" value="Patrick G. Durand"/>
	        <attribute name="Title" value="${prg.name}"/>
	        <attribute name="Version" value="${prg.version}"/>
	      </manifest>
	    </jar>
	    <jar destfile="${pbc.libJar}" update="true">
	      <zipfileset dir="${basedir}" includes="*.txt"/>
	    </jar>
	</target>

</project>
